EDOLINGO_NOW.html

--- a/EDOLINGO_NOW.html
+++ b/EDOLINGO_NOW.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EDOLINGO - Global Talent Visa App</title>
+    <title>EDOLINGO</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Load Inter Font -->
@@ -1212,3 +1212,4 @@
     </script>
 </body>
 </html>
+
